fix: hide table scrollbar

--- a/components/BackSide.module.scss
+++ b/components/BackSide.module.scss
@@ -34,6 +34,7 @@
   overflow: scroll;
   display: block;
   font-size: 13px;
+  overflow: auto;
 
   thead {
     font-size: 14px;
